--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "build": "next build",
     "start": "next start",
     "lint": "eslint",
-    "studio:deploy": "STUDIO_BASEPATH=/ sanity deploy",
+    "studio:deploy": "SANITY_STUDIO_BASEPATH=/ sanity deploy",
     "studio:dev": "sanity dev"
   },
   "dependencies": {
@@ -35,6 +35,7 @@
     "sanity": "^4.10.1",
     "sanity-plugin-mux-input": "^2.9.0",
     "sonner": "^2.0.7",
+    "styled-components": "^6.1.19",
     "tailwind-merge": "^3.3.1",
     "zod": "^4.1.11"
   },
