--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
     "lint": "eslint && npm run lint:colors",
     "lint:colors": "bash scripts/lint-colors.sh",
     "studio:deploy": "SANITY_STUDIO_BASEPATH=/ sanity deploy",
-    "studio:dev": "sanity dev"
+    "studio:dev": "sanity dev",
+    "studio:seed:cases": "sanity exec scripts/seed-cases.ts --with-user-token"
   },
   "dependencies": {
     "@mux/mux-player-react": "^3.6.0",
