--- a/package.json
+++ b/package.json
@@ -11,9 +11,11 @@
     "studio:deploy": "SANITY_STUDIO_BASEPATH=/ sanity deploy",
     "studio:dev": "sanity dev",
     "studio:seed:cases": "sanity exec scripts/seed-cases.ts --with-user-token",
-    "studio:seed:clients": "sanity exec scripts/seed-clients.ts --with-user-token"
+    "studio:seed:clients": "sanity exec scripts/seed-clients.ts --with-user-token",
+    "studio:recreate:cases": "sanity exec scripts/recreate-cases.ts --with-user-token"
   },
   "dependencies": {
+    "@gsap/react": "^2.1.2",
     "@mux/mux-player-react": "^3.6.0",
     "@portabletext/react": "^3.2.4",
     "@radix-ui/react-accordion": "^1.2.12",
@@ -33,6 +35,7 @@
     "embla-carousel-react": "^8.6.0",
     "framer-motion": "^12.23.22",
     "gsap": "^3.13.0",
+    "lenis": "^1.3.13",
     "lucide-react": "^0.544.0",
     "next": "15.5.4",
     "next-sanity": "^11.4.2",
